2019-06-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/qnorMix-ex.R: renamed from tests/ex.R

	* R/norMix.R (norMix): now *warn* about 'sig2';  use
	`.Deprecated()` instead of warning() for all deprecation warnings.

2019-01-21  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-4

	* R/norMix.R (norMix2call, as.expression.normix)
	(as.function.normix): new functionality, useful for symbolic computations.

2017-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/norMix.R (var.norMix): use `drop(.)` to get rid of (R-devel)
	deprecation warning ("Recycling array of length 1").

	* DESCRIPTION (Date): ready to release to CRAN.

2015-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-3.

2016-08-24  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): ready to release to CRAN.

	* R/norMix.R (plot.norMix): allow `ylim` to work in plot() method.

2015-10-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-2.  Encoding UTF-8

2015-07-25  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-1.
	* NAMESPACE: import from "base" packages

2014-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-0, as we are not 100% back compatible
	with this:

	* R/norMix.R (norMix): allow new 'sigma' and prefer it to 'sig2',
	After suggestions from Doug Martin (UW Seattle).
	(`[.norMix`): new method which allows 'x[, "sig2"]' to continue working.

2013-04-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-4, released to CRAN

	* R/norMixEM.R (norMixMLE): finally providing MLE in addition to ME.

2013-01-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/norMixEM.R (norMixEM): finally add Fritz Leisch's EM estimation
	routine; with 'trace' and other tweaks.

2011-04-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-3, CRAN-released 2011-04-14
